# dithering

./: Cargo.toml  LICENSE  README.md  dithering.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: diffusion.rs  lib.rs  matrices.rs  ordered.rs  palette.rs  space.rs
tests/: test_dithering.py
