[package]
name = "dithering"
version = "0.2.0"
edition = "2021"
rust-version = "1.83"
authors = ["Patrik Larsson <patrik@backyardml.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://backyardml.github.io/"
repository = "https://github.com/BackyardML/dithering"
description = "Fast image dithering for Python: ordered (Bayer), error diffusion (Floyd-Steinberg & friends), random; palettes, linear-light and more."
keywords = ["image-processing", "dithering", "python", "halftone"]
categories = ["multimedia::images"]

[lib]
name = "dithering"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.29"
pyo3 = { version = "0.29", features = ["abi3-py39"] }

[profile.release]
lto = true
codegen-units = 1
